<resources>
    <string name="app_name">kodeex7</string>
    <string name="app_title">Kode Pills</string>
    <string name="action_history">History</string>
    <string name="edit">Edit</string>
    <string name="pill_add">Add new pill</string>
    <string name="pill_update_str">Update</string>
    <string name="pill_delete_str">Delete</string>
    <string name="pill_name_str">Pill name</string>
    <string name="pill_desc_str">Pill description</string>
    <string name="pill_note_str">Pill notes</string>
    <string name="pill_take_time">Time for pill</string>
    <string name="pill_start_str">First day</string>
    <string name="pill_per_day_str">Pills per day</string>
    <string name="pill_meal_str">Regard to meal</string>
    <string name="pill_meal_delay_str">Meal delay</string>
    <string name="pill_list_note">Started at %s - %s per day</string>
    <string name="time_to_pill">It\'s time to take pill</string>
    <string name="time_to_meal">It\'s time to take meal related to</string>
    <string name="nt_time_to_pill">Time to take %s pill</string>
    <string name="nt_time_to_meal">Time to meal for %s pill</string>
    <string name="meal_none">Regardless</string>
    <string name="schedule">Schedule</string>
    <string name="eat_none">No matter</string>
    <string name="eat_after">After meal</string>
    <string name="eat_before">Before meal</string>
    <string name="nice_meal">Have a nice meal!</string>
    <string name="input_error">Not enough data</string>
    <string name="pill_error">Pill error</string>
    <string name="confirm_delete">Pill %s will be deleted. Proceed?</string>
    <string name="confirm_ok">OK</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_later">Later</string>
    <string name="no_pills">It\'s seems You are very strong and have no pills. Great!</string>
    <string name="status_success">Successful</string>
    <string name="status_fail">Failed</string>
    <string name="status_unknown">Unknown</string>

    <string-array name="pill_per_day_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="pill_meal_related_values">
        <item>Regardless</item>
        <item>Before meal</item>
        <item>After meal</item>
    </string-array>

    <string-array name="pill_meal_delay_values">
        <item>15 min.</item>
        <item>30 min.</item>
        <item>45 min.</item>
    </string-array>
</resources>
