<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ex.kode.kodeex7.TakePillActivity"
    android:background="#f4f1fc">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/take_pill_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/pills"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/take_pill_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/time_to_pill"
            android:textSize="14dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/take_pill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_title"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pill_desc_str"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:id="@+id/take_pill_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_to_pill"
            android:textSize="14dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pill_note_str"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:id="@+id/take_pill_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_to_pill"
            android:textSize="14dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/take_cancel"
                style="@style/RtlUnderlay.Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/confirm_cancel" />

            <Button
                android:id="@+id/take_later"
                style="@style/RtlUnderlay.Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/confirm_later" />

            <Button
                android:id="@+id/take_pill"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/confirm_ok" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
