<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ex.kode.kodeex7.NewPillActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp" >

            <ImageView
                android:id="@+id/pill_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pills" />

            <Button
                android:id="@+id/pill_img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/edit"
                android:visibility="gone"/>

            <!-- Pill description form -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/pill_name_str"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pill_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/pill_desc_str"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pill_desc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/pill_note_str"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pill_note_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/schedule"
                android:textSize="14dp"
                android:textStyle="bold" />

            <!-- Pill Schedule form -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/pill_start_str"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pill_start_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:inputType="none"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/pill_take_time"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pill_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:inputType="none"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/pill_meal_str"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/pill_meal_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/pill_meal_delay_str"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/pill_meal_delay_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input" />

                </LinearLayout>

            </LinearLayout>

            <!-- Pill action buttons -->

            <Button
                android:id="@+id/pill_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/pill_add"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/pill_update_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/pill_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/pill_delete_str" />
                <Button
                    android:id="@+id/pill_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/pill_update_str" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:visibility="gone"
                android:id="@+id/test_pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:backgroundTint="?attr/colorButtonNormal"
                app:srcCompat="@android:drawable/checkbox_on_background" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
